--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "framer-motion": "^12.23.6",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.1.2",
+    "next": "^16.0.2-canary.5",
     "next-themes": "^0.4.6",
-    "react": "^18.3.1",
+    "react": "^19.2.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.54.1",
     "react-is": "^19.1.0",
     "react-resizable-panels": "^2.1.7",
